# android-gamesdk

./: .gitignore  ARCHIVED  Android.bp  CMakeLists.txt  LICENSE  OWNERS  PREUPLOAD.cfg  README  README.md  RELEASE_NOTES  VERSIONS  ab_info.py  build.bat  build.gradle  build.sh  build_swappy  bundle-zip.sh  download.sh  gradle.properties  lll  prepproto.gradle  project.config  settings.gradle  test.py  test.sh
bender/bender-base/app/: CMakeLists.txt  build.gradle
games-controller/: CMakeLists.txt  build.gradle
games-memory-advice/: CMakeLists.txt  OWNERS  build.gradle  c_header_check.c  default.json
games-memory-advice/core/: memory_advice.cpp  memory_advice_c.cpp  memory_advice_impl.cpp  memory_advice_impl.h  memory_advice_internal.h  memory_advice_utils.cpp  metrics_provider.cpp  metrics_provider.h  predictor.cpp  predictor.h  state_watcher.cpp  state_watcher.h
games-memory-advice/include/: memory_advice
games-memory-advice/src/main/: AndroidManifest.xml
games-memory-advice/test/: basic.cpp
games-performance-tuner/: CMakeLists.txt  build.gradle
games-performance-tuner/core/: activity_lifecycle_state.cpp  activity_lifecycle_state.h  annotation_map.h  annotation_util.cpp  async_telemetry.h  backend.h  battery_metric.h  battery_provider.cpp  battery_provider.h  battery_reporting_task.h  chrono_time_provider.cpp  common.h  crash_handler.h  file_cache.cpp  file_cache.h  frametime_metric.cpp  frametime_metric.h  histogram.cpp  histogram.h  id_provider.h  lifecycle_upload_event.h  loadingtime_metric.cpp  loadingtime_metric.h  meminfo_provider.h  memory_metric.h  memory_record_type.h  memory_telemetry.cpp  memory_telemetry.h  metric.h  metricdata.h  process_time.h  protobuf_util_internal.cpp  protobuf_util_internal.h  request_info.cpp  request_info.h  runnable.cpp  runnable.h  session.h  settings.h  thermal_metric.h  (+15 more)
games-performance-tuner/http_backend/: debugInfo.cpp  generateTuningParameters.cpp  http_backend.cpp  http_backend.h  http_request.cpp  http_request.h  json_serializer.cpp  json_serializer.h  predict_quality_levels.cpp  ultimate_uploader.h
games-performance-tuner/include/: tuningfork
games-performance-tuner/proto/: descriptor.proto  example_tuningfork.proto  protobuf_nano_util.h  protobuf_util.cpp  protobuf_util.h
games-performance-tuner/protobuf/: CMakeLists.txt  protobuf.cmake
games-performance-tuner/src/main/: AndroidManifest.xml
games-performance-tuner/tools/TuningForkMonitor/: build.gradle  settings.gradle
games-performance-tuner/tools/validation/: README.md  build.gradle
games-performance-tuner/unity/: unity_tuningfork.cpp
packagesdk/app/: CMakeLists.txt
samples/cube/app/: CMakeLists.txt  build.gradle
src/: AndroidManifest.xml  CMakeLists.txt  paddleboat
src/common/: ChoreographerShim.h  JNIUtil.h  Log.h  StringShim.h  Trace.h  apk_utils.cpp  apk_utils.h  system_utils.cpp
src/common/jni/: jni_helper.cpp  jni_helper.h  jni_wrap.h  jnictx.h
src/device_info/: CMakeLists.txt  device_info.cc  device_info.cmake  device_info.cpp  device_info.h
src/device_info/core/: basic_texture_renderer.cpp  basic_texture_renderer.h  device_info.cpp  stream_util.cpp  stream_util.h  texture_test_cases.cpp  texture_test_cases.h
src/device_info/jni/: com_google_androidgamesdk_NativeActivity.cpp  device_info_jni.cpp
src/device_info_jni/: DeviceInfoJni.java  device_info_jni.cpp
src/extras/: build.gradle
src/extras/dex/: unpack.sh
src/maven/: games-activity.pom  games-controller.pom  games-frame-pacing.pom  games-memory-advice.pom  games-text-input.pom  gaming-frame-pacing.pom  gaming-performance-tuner.pom  gaming-performancer-tuner.pom
src/memory_advice/: CMakeLists.txt  ExternalDependencies.cmake
src/memory_advice/core/: device_profiler.cpp  device_profiler.h  memory_advice.cpp  memory_advice_c.cpp  memory_advice_impl.cpp  memory_advice_impl.h  memory_advice_utils.h  (+7 more)
src/memory_hints/: CMakeLists.txt  c_header_check.c  memory_hints.cpp  memory_hints_c.cpp  memory_hints_internal.h
src/performance-utils/: Android.bp  device_info.cc  device_info.h  device_info_debug.h
src/protobuf/: protobuf.cmake
src/swappy/: CMakeLists.txt  ChoreographerFilter.cpp  ChoreographerThread.cpp  ChoreographerThread.h  EGL.h  OWNERS  Swappy.cpp  Swappy.h  SwappyCommon.cpp  SwappyCommon.h  Swappy_c.cpp  build.gradle
src/swappyVk/: CMakeLists.txt  SwappyVk.cpp  SwappyVk.h  SwappyVkAndroidFallback.cpp  SwappyVkAndroidFallback.h  SwappyVkBase.cpp  SwappyVkBase.h  SwappyVkCommon.h  SwappyVkFallback.cpp  SwappyVkFallback.h  SwappyVkGoogleDisplayTiming.cpp  SwappyVkGoogleDisplayTiming.h  SwappyVkGoogleDisplayTimingAndroid.cpp  SwappyVkGoogleDisplayTimingAndroid.h  SwappyVkIncludeAll.h  SwappyVkVulkanFallback.cpp  SwappyVkVulkanFallback.h
src/tuningfork/: CMakeLists.txt  annotation_util.cpp  annotation_util.h  build.gradle  c_header_check.c  clearcutBackend.cpp  clearcutBackend.h  clearcut_backend.cpp  clearcut_backend.h  clearcutserializer.cpp  clearcutserializer.h  crash_handler.cpp  crash_handler.h  debug_upload.cpp  file_cache.cpp  file_cache.h  fpdownload.cpp  ge_backend.cpp  ge_backend.h  ge_serializer.cpp  ge_serializer.h  histogram.cpp  histogram.h  jni_helper.cpp  jni_helper.h  jni_wrap.cpp  jni_wrap.h  jnictx.cpp  jnictx.h  memory_telemetry.cpp  memory_telemetry.h  prong.cpp  prong.h  protobuf_nano_util.h  protobuf_util.cpp  protobuf_util.h  runnable.h  tuningfork.cpp  tuningfork_c.cpp  tuningfork_extra.cpp  (+12 more)
test/device_info/: CMakeLists.txt  main.cc  stream_util.cpp
test/memory_advice/: CMakeLists.txt  main.cpp  memory_advice_test.h  memory_utils.cpp  memory_utils.h  shared_main.cpp  test_utils.cpp  test_utils.h
test/swappy/: CMakeLists.txt  main.cpp  shared_main.cpp  swappy_test.h  swappycommon_test.cpp  swappycommon_test.cpp~
test/tuningfork/: CMakeLists.txt  annotation_descriptor_test.cpp  annotation_test.cpp  common.cpp  file_cache_test.cpp  histogram_test.cpp  jni_test.cpp  main.cpp  serialization_test.cpp  settings_test.cpp  shared_main.cpp  tf_test_utils.cpp  tf_test_utils.h  tuningfork_test.cpp  tuningfork_test.h  unity_version.script
(+2305 files in other folders)
