cmake_minimum_required(VERSION 3.18.1)
project(android_game_sdk C CXX)

project(android_game_sdk C CXX)
set(IgnoreOldToolchainWarning "${ANDROID_UNIFIED_HEADERS}")

if ("swappy" IN_LIST GAMESDK_LIBRARIES)
  add_subdirectory( ./swappy )
endif()
if ("tuningfork" IN_LIST GAMESDK_LIBRARIES)
  add_subdirectory( ./tuningfork )
endif()
if ("memory_advice" IN_LIST GAMESDK_LIBRARIES)
  add_subdirectory( ./memory_advice )
endif()
if ("oboe" IN_LIST GAMESDK_LIBRARIES)
  add_subdirectory( ./oboe )
endif()
